# AIRS

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
airs/: __init__.py  cost.py  main.py  orchestrator.py
airs/agents/: analyst.py  base.py  coder.py  design.py  experimenter.py  factory.py  ideation.py  literature.py  reviewer.py  writer.py
airs/config/: loader.py
airs/llm/: base.py  claude.py  gemini.py  openai.py
airs/skills/: __init__.py  arxiv.py  arxiv_download.py  base.py  file_read.py  file_write.py  latex_compile.py  python_exec.py  ssh_exec.py  web_search.py
airs/ssh/: __init__.py  client.py
airs/web/: app.py
airs/web/templates/: index.html
configs/: agents.yaml  pipeline.yaml  ssh.yaml.example
demos/traffic_pems/: project.yaml
demos/traffic_pems/analysis/: analysis.md
demos/traffic_pems/code/: config.py  data_utils.py  model.py  train.py
demos/traffic_pems/design/: design.md
demos/traffic_pems/experiments/: results.md
demos/traffic_pems/ideation/: ideas.md  selected_idea.md
demos/traffic_pems/literature/: survey.md
demos/traffic_pems/paper/: draft.md
demos/traffic_pems/review/: review.md
